# pyroutelib3

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  dev_requirements.txt  pyproject.toml  pyroutelib3.py  requirements.txt  setup.py
.github/workflows/: check.yml
docs/: requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  index.rst  license.rst  migrating_from_v1.rst
docs/source/api/: pyroutelib3.nx.rst  pyroutelib3.osm.reader.rst  pyroutelib3.osm.rst  pyroutelib3.protocols.rst  pyroutelib3.rst
pyroutelib3/: __init__.py  datastore.py  distance.py  err.py  kd.py  nx.py  osm_graph.py  osm_reader.py  osmparsing.py  protocols.py  router.py  router_test.py  simple_graph.py  test_distance.py  test_kd.py  test_nx.py  test_osm_graph.py  test_osm_reader.py  test_router.py  tiledata.py  tilenames.py  types.py  util.py  weights.py
pyroutelib3/osm/: __init__.py  graph.py  live_graph.py  profile.py  reader.py  test_graph.py  test_live_graph.py  test_profile.py  test_reader.py
pyroutelib3/osm/fixtures/: simple_graph.osm  simple_graph.osm.bz2  simple_graph.osm.pbf
pyroutelib3/osm/pbf/: fileformat_pb2.py  fileformat_pb2.pyi  osmformat_pb2.py  osmformat_pb2.pyi
pyroutelib3/osm/test_fixtures/: simple_graph.osm  tile_1.osm  tile_2.osm  tile_base.osm
tests/: test_datastore.py  test_live.py  test_mikolajki.osm  test_mikolajki.py  test_router.py
