[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyroutelib3"
authors = [{name = "Mikołaj Kuranowski", email = "mkuranowski+pypackages@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8, <4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing_extensions ~= 4.0",
    "protobuf ~= 5.27",
    "filelock ~= 3.15",
]

[project.urls]
Home = "https://github.com/MKuranowski/pyroutelib3"
Source = "https://github.com/MKuranowski/pyroutelib3"
Documentation = "https://pyroutelib3.readthedocs.io/"
Tracker = "https://github.com/MKuranowski/pyroutelib3/issues"


[tool.black]
line-length = 100
exclude = "pyroutelib3/osm/pbf"

[tool.isort]
profile = "black"
line_length = 100
skip = ["pyroutelib3/osm/pbf"]

[tool.pyright]
typeCheckingMode = "strict"
ignore = ["pyroutelib3/osm/pbf", "docs"]
